header updates add back rambling link

--- a/src/content/rambling/anime2m.mdx
+++ b/src/content/rambling/anime2m.mdx
@@ -2,6 +2,7 @@
 title: "Animefaces 2M dataset"
 description: "Developing a large-scale anime faces dataset."
 pubDate: "June 18, 2023"
+heroImage: "/images/animefaces2m.svg"
 ---
 
 ## Overview
