--- a/src/content/rambling/anime2m.mdx
+++ b/src/content/rambling/anime2m.mdx
@@ -2,7 +2,7 @@
 title: "Animefaces 2M dataset"
 description: "Developing a large-scale anime faces dataset."
 pubDate: "June 18, 2023"
-heroImage: "/devlog/images/animefaces2m.svg"
+heroImage: "/devlog/images/animefaces2m.png"
 ---
 
 ## Overview
@@ -17,7 +17,7 @@ Steven Evan was kind enough to share his [Pixiv dataset](https://www.kaggle.com/
 The dataset consists of top ranking pixiv images from 2018 ~ 2020. However, the faces dataset suffers from low resolution and the faces are too tightly cropped for my taste.
 To address these issues, I decided to create a large-scale animefaces dataset combining all three sources.
 
-![pipeline](/devlog/images/animefaces2m.svg)
+![pipeline](/devlog/images/animefaces2m.png)
 
 ## Data cleaning, filtering, processing, and all that jazz
 
