add download links

--- a/src/content/rambling/anime2m.mdx
+++ b/src/content/rambling/anime2m.mdx
@@ -19,6 +19,16 @@ To address these issues, I decided to create a large-scale animefaces dataset co
 
 ![pipeline](/devlog/images/animefaces2m.png)
 
+## Download
+
+### Activeloop
+
+[Access Link](https://app.activeloop.ai/reny/animefaces)
+
+### Kaggle
+
+(coming soon)
+
 ## Data cleaning, filtering, processing, and all that jazz
 
 ### Removing problematic images
