--- a/src/content/rambling/anime2m.mdx
+++ b/src/content/rambling/anime2m.mdx
@@ -157,7 +157,7 @@ One can observe that higher the compression rate there is a significant loss in 
 ![muse](/devlog/images/muse.jpg)
 
 Using these quantized latents, one can train a transformer model to iteratively generate images. This is the approach taken by [MASKGIT](https://arxiv.org/abs/2202.04200), [MUSE](https://arxiv.org/abs/2301.00704), [Paella](https://github.com/dome272/Paella), and [MAGE](https://arxiv.org/abs/2211.09117).
-Above figure (taken from MUSE paper), provides a schematic overview of the model.
+Above figure (taken from MUSE paper) provides a schematic overview of the model.
 
 ![muse](/devlog/images/muse.png)
 
