update projcts+ cv

--- a/src/content/rambling/anime2m.mdx
+++ b/src/content/rambling/anime2m.mdx
@@ -175,7 +175,7 @@ Above are trained models from custom Stylegan implementation that I wrote a coup
 
 ![diffusion](/devlog/images/edm.png)
 
-For diffusion models, I've implemented methods from [EDM](https://arxiv.org/abs/2206.00364) paper to generate images on 64x64 resolution. As a transfomer heretic, I've used a ViT backbone for training the diffusion model.
+For diffusion models, I've implemented methods from [EDM](https://arxiv.org/abs/2206.00364) paper to generate images on 64x64 resolution. As a devoted member of transformers cult, I've used a ViT backbone for training the diffusion model.
 Above are a few samples from the model. Certinaly, the quality is not as good as I want it to be. I plan to revise the implementation to improve the sampling quality.
 
 ## Next steps
