update main figure (too big)

--- a/src/content/rambling/anime4m.mdx
+++ b/src/content/rambling/anime4m.mdx
@@ -2,12 +2,12 @@
 title: "Bigbooru 4M dataset"
 description: "Developing a large scale multimodal dataset of anime illustrations"
 pubDate: "October 1, 2023"
-heroImage: "/devlog/images/bigbooru.svg"
+heroImage: "/devlog/images/bigbooru.png"
 ---
 
 ## 🔍 Overview
 
-![Bigbooru](/devlog/images/bigbooru.svg)
+![Bigbooru](/devlog/images/bigbooru.png)
 
 <div className="center p-2 text-xl opacity-80">Preview of the Bigbooru dataset</div>
 
